--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/capstone?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: root
-    password: 1234
+    url: jdbc:mysql://capstone2025-db.cxwgiuokiozq.ap-northeast-2.rds.amazonaws.com:3306/capstone?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: capstone
+    password: capstone2025DBdkagh
   hikari:
     auto-commit: false
 
@@ -23,3 +23,7 @@ spring:
           use_second_level_cache: false
           use_query_cache: false
     timezone: Asia/Seoul
+
+jwt:
+  secret: "wlrmaghwjddlqorhvmek!!!!!!!!!!"
+  expiration: 86400000
